# PropCP

./: CMakeLists.txt  LICENSE  README.md  adapter-header.h
examples/: CMakeLists.txt
examples/Commands/: CMakeLists.txt  main.cpp
examples/Commands/include/: BarPropertyHandler.h  Command.h  FooPropertyHandler.h  adapter-header.h
examples/ExampleCmds/: CMakeLists.txt  main.cpp
examples/ExampleCmds/include/: BarPropertyHandler.h  Command.h  CommandWithDispatch.h  FooPropertyHandler.h  MyConfig.h  SomeOtherPropertyHandler.h  adapter-header.h
examples/Simple/: CMakeLists.txt  custom.h  framework.h  main.cpp
examples/Tires/: CMakeLists.txt  ExternalTypes.h  Properties.h  main.cpp
include/PropCP/: dispatch.h  handler.h  propcp.h  typelist.h
